# ai-cs-phase0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/knowledge_sample/: K001_FSC證書說明.md  K002_紙材規格表.md  K003_打樣與訂單變更SOP.md  K004_品質政策與服務說明.md  K005_客訴處理SOP.md  K008_印前檔案規範.md  K009_收檔與印前流程.md
db/: init.sql
demo/: index.html
src/: answer.py  chunker.py  config.py  db.py  demo.py  embedder.py  evaluate.py  fusion.py  guards.py  ingest.py  line_webhook.py  llm.py  retrieve.py  server.py  tokenize_zh.py
tests/: test_answer.py  test_chunker.py  test_fusion.py  test_guards.py  test_line_webhook.py
