[project]
name = "phase0-rag"
version = "0.1.0"
description = "智慧客服平台 Phase 0:知識匯入 / 混合檢索 / 檢索評測骨架"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "jieba>=0.42",
    "httpx>=0.27",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
demo = ["fastapi>=0.110", "uvicorn>=0.29", "pgserver>=0.1"]
deploy = ["fastapi>=0.110", "uvicorn>=0.29"]

[tool.pytest.ini_options]
testpaths = ["tests"]
